# SDL3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  conan_provider.cmake  conandata.yml  main.cpp
assets/: CMakeLists.txt
assets/shaders/: vertex.vert
cmake/: cmake-utils.cmake  wd_conan_provider.cmake  wdtargets.cmake
docs/: WD_CodeStyle.xml  components.puml
docs/doxygen/: wd_sdl.doxygen
doxygen/: wd_sdl.doxygen
include/: CMakeLists.txt  WD_engine.h  WD_gl_pipeline.h  WD_log.h  m_wd.cppm  pch.h
include/engine/: CMakeLists.txt  WD_engine.h  WD_gl_pipeline.h  WD_log.h  WD_shader.h  WD_window.h  engine.cppm  log.cppm  m_engine.cppm  window.cppm
include/engine/keyboard/: CMakeLists.txt  WD_keyboard.h  keyboard.cppm
include/engine/math/: CMakeLists.txt  WD_math.h  WD_point.h
include/math/: CMakeLists.txt  m_math.cppm  math.cppm  point.cppm
include/opengl/: CMakeLists.txt  WD_gl_context.h  WD_gl_shader.h  WD_shader.h  context.cppm  gl.h  m_opengl.cppm  opengl.cppm
include/opengl/KHR/: CMakeLists.txt
include/opengl/buffers/: CMakeLists.txt  WD_gl_buffer.h  buffer.cppm
include/opengl/glad/: CMakeLists.txt  gl.h
include/opengl/object/: CMakeLists.txt  m_object.cppm  object.cppm
include/opengl/object/buffer/: buffer.cppm
include/opengl/object/shader/: CMakeLists.txt  container.cppm  m_shader.cppm  program.cppm  shader.cppm
include/opengl/object/vao/: CMakeLists.txt  vertex_array.cppm
include/opengl/object/vertex/: CMakeLists.txt  array.cppm
include/opengl/shader/: CMakeLists.txt  WD_gl_shader.h  WD_gl_shader_container.h  WD_gl_shader_program.h  container.cppm  m_shader.cppm  program.cppm  shader.cppm
include/utility/: CMakeLists.txt  constructors.cppm
include/wd/: CMakeLists.txt  engine.cppm  m_wd.cppm
include/wd/math/: CMakeLists.txt  m_math.cppm  math.cppm  point.cppm
include/wd/math/2D/: CMakeLists.txt  graph.cppm  m_2D.cppm  point.cppm
include/wd/sdl/: CMakeLists.txt  keyboard.cppm  log.cppm  m_sdl.cppm  window.cppm
include/wd/sdl/opengl/: context.cppm  gl.h  m_opengl.cppm
include/wd/sdl/opengl/object/: CMakeLists.txt  factory.cppm  m_object.cppm  n_creator.cppm  object.cppm  storage.cppm
include/wd/sdl/opengl/object/buffer/: buffer.cppm
include/wd/sdl/opengl/object/shader/: m_shader.cppm  program.cppm  shader.cppm
include/wd/sdl/opengl/object/vertex/: array.cppm
include/wd/utility/: CMakeLists.txt  constructors.cppm  m_utility.cppm
shaders/: fragment.frag.glsl
src/: CMakeLists.txt  WD_engine.cpp  main.cpp
src/asm/: CMakeLists.txt  learn.asm
src/engine/: CMakeLists.txt  WD_engine.cpp  WD_log.cpp  WD_shader.cpp  WD_window.cpp  engine.cpp  log.cpp  window.cpp
src/engine/keyboard/: CMakeLists.txt  WD_keyboard.cpp  keyboard.cpp
src/engine/math/: CMakeLists.txt  WD_math.cpp
src/glad/: gl.c
src/math/: CMakeLists.txt  math.cpp
src/opengl/: CMakeLists.txt  WD_gl_context.cpp  WD_gl_shader.cpp  WD_shader.cpp  context.cpp  gl.c
src/opengl/buffers/: CMakeLists.txt  WD_gl_buffer.cpp  buffer.cpp
src/opengl/glad/: CMakeLists.txt  gl.c
src/opengl/object/: CMakeLists.txt  object.cpp
src/opengl/object/buffer/: buffer.cpp
src/opengl/object/shader/: program.cpp  shader.cpp
src/opengl/object/vao/: CMakeLists.txt  vertex_array.cpp
src/opengl/object/vertex/: CMakeLists.txt  array.cpp
src/opengl/shader/: CMakeLists.txt  WD_gl_shader.cpp  WD_gl_shader_container.cpp  WD_gl_shader_program.cpp  WD_gl_shaderfactory.cpp  WD_gl_shaderprogram.cpp  container.cpp  program.cpp  shader.cpp
src/utility/: CMakeLists.txt  WD_constructors.h
src/wd/: CMakeLists.txt  engine.cpp
src/wd/math/: CMakeLists.txt  math.cpp
src/wd/math/2D/: CMakeLists.txt  graph.cpp
src/wd/sdl/: CMakeLists.txt  keyboard.cpp  log.cpp  window.cpp
src/wd/sdl/opengl/: CMakeLists.txt  context.cpp  gl.c
src/wd/sdl/opengl/object/: CMakeLists.txt  factory.cpp  object.cpp  storage.cpp
src/wd/sdl/opengl/object/buffer/: CMakeLists.txt  buffer.cpp
src/wd/sdl/opengl/object/shader/: program.cpp  shader.cpp
src/wd/sdl/opengl/object/vertex/: array.cpp
